Fix overflow

--- a/css/site.css
+++ b/css/site.css
@@ -299,7 +299,7 @@ body {
   background-size: 427px 650px;
   position: absolute;
   bottom: 100px;
-  right: -200px; }
+  right: -150px; }
 #scenario-apart #shanghai {
   height: 465px;
   width: 460px;
